# project_report

./: .gitignore  README.md  main.tex  template.tex  template_config.tex
.github/workflows/: build_latex_pdf.yml
diagrams/: busqueda_parking_software.excalidraw  concentrador.excalidraw  concentrador_capas.excalidraw  concentrador_flujo.excalidraw  concentrador_flujo_general.excalidraw  concentrador_simple.excalidraw  events.excalidraw  general.excalidraw  mobile_app_stack.excalidraw  sensor.excalidraw  sensor_blocks.excalidraw  sensor_high_level.excalidraw  sensor_simple.excalidraw  sistemas_reservas.excalidraw  usuarios.excalidraw
secciones/anexos/: anexos.tex
secciones/referencias/: referencias.tex
secciones/resume/: abstract.tex  resumen.tex
secciones/section_1/: section_1.tex
secciones/section_2/: section_2.tex
secciones/section_3/: section_3.tex
secciones/section_4/: aplicacion_movil.tex  nodo_concentrador.tex  nodo_de_borde.tex  nodo_sensor.tex  section_4.tex  sensor_concentrator_server_sequence.txt  sistema_de_reservas.tex  software_integral.tex
utils/: battery_lifetime_estimation.ipynb  pyproject.toml  qmc5883l.ipynb  rosario_h3_index.ipynb  vl53l0x.ipynb
utils/.ipynb_checkpoints/: battery_lifetime_estimation-checkpoint.ipynb
utils/data/qmc/: qmc_back_1.txt  qmc_back_2.txt  qmc_back_3.txt  qmc_forward_1.txt  qmc_forward_2.txt  qmc_forward_3.txt  qmc_forward_4.txt  qmc_forward_5.txt
utils/data/vl53l0x/: vl53l0x_back_1.txt  vl53l0x_back_2.txt  vl53l0x_back_3.txt  vl53l0x_forward_1.txt  vl53l0x_forward_2.txt  vl53l0x_forward_3.txt
(+6 files in other folders)
